Author details updated

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,7 +1,8 @@
 Author and Contributor
-This file acknowledges and honors all the individuals who have contributed their time and effort to enhance the content of this repository. Your contributions are invaluable, and we appreciate your dedication to the project's success. Thank you for being a part of this journey! 🙌🌟
+This file acknowledges and honors all the individuals who have contributed their time and effort to enhance the content of this repository. 
+Your contributions are invaluable, and we appreciate your dedication to the project's success. 
+Thank you for being a part of this journey! 🙌🌟
 
 Blessing Fortune Nzeh <kwomofortuneb@gmail.com>
-
 Keremenz kassaye      <keremenzkas@gmail.com>
 
